--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=aa196zejdo7kdgf.czcxhdvyuuxz.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=db_chat
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ebdb
+DB_USERNAME=admin
+DB_PASSWORD=admin1234
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
